--- a/RGPD.html
+++ b/RGPD.html
@@ -19,17 +19,18 @@
 
 <body>
     <header class="row" id="header">
-        <a class="col-2"><img id="logo" src="assets/img/logo-full.png"></a>
+        <a class="col-2" href="https://bluefalcon64.github.io/website-digital-consultant/"><img id="logo" src="assets/img/logo.png" alt="Logo"></a>
         <nav id="nav-bar" class="col-10">
-
             <ul>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
-                <li><button type="button" class="btn btn-primary btn-lg">Lorem ipsum dolor sit</button></li>
+                <li><a style="color: white; text-decoration: none;" href="#">Accueil</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#Apropos">À propos</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#Services">Services</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#partenaire">Partenaires</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#galeries">Galerie</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#Blog">Blog</a></li>
+                <li><a style="color: white; text-decoration: none;" href="#contacte">Contact</a></li>
             </ul>
         </nav>
-
     </header>
 
 <main>
@@ -272,23 +273,23 @@
 </main>
 
 
-    <footer class="footer-dark">
+<footer class="footer-dark">
 
-        <ul>
-            <li>bla bla bla</li>
-            <li>autre Bla Bla Bla</li>
-        </ul>
+    <ul>
+        <a style="color: #ebfaec; text-decoration: none;" href=""><li>Conditions d'utilisation</li></a>
+        <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Mentions Légales</li></a>
+    </ul>
 
-        <div class="item social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        </div>
+    <div class="item social">
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+    </div>
 
-        <p class="copyright">Aujard Alexis © 2022</p>
+    <p class="copyright">Digital Consultant © 2022</p>
 
-    </footer>
+</footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
