--- a/RGPD.html
+++ b/RGPD.html
@@ -1,21 +1,17 @@
 <!doctype html>
 <html lang="fr">
 
-<head>
-    <title>Titre de la page</title>
-
-    <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="https://kit.fontawesome.com/ef83dc3811.js" crossorigin="anonymous"></script>
-    <!--  <script src="script.js"></script>  -->
-
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="Alexis Aujard">
-
-</head>
+    <head>
+        <title>Digital Consultant</title>
+    
+        <link rel="stylesheet" media="screen" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700">
+        <link rel="stylesheet" href="styles/bootstrap.min.css">
+        <link rel="stylesheet" href="styles/styles.css">    
+        <script src="https://kit.fontawesome.com/ef83dc3811.js" crossorigin="anonymous"></script>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="> Digital Consultant (DC) est une entreprise pluridisciplinaire spécialisée dans la transition numérique des petites et moyennes entreprises. Nous sommes  composés  de  professionnels  indépendants  expérimentés  qui collaborent régulièrement ensemble.">
+    </head>
 
 <body>
     <header class="row" id="header">
