--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     <footer class="footer-dark">
 
         <ul>
-            <a style="color: #ebfaec; text-decoration: none;" href=""><li>Conditions d'utilisation</li></a>
+            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Conditions d'utilisation</li></a>
             <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Mentions Légales</li></a>
         </ul>
 
