--- a/index.html
+++ b/index.html
@@ -130,21 +130,21 @@
         <section>
             <h3 id="galeries">Notre galerie</h3>
             <section class="row ">
-                <div class="ball">
+                <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
                 </div>
       
-                <div class="ball">
+                <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
               
-                <div class="ball">
+                <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
