--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
                 </div>
         </main>
         <hr style="border-color: #ebfaec;">
-        <section id="Apropos">
+        <div id="Apropos"></div>
+        <section>
           <h3 id="">Pourquoi nous choisir ?</h3>
           <div id="3offre" class="col-12 ">
               <div class="row justify-content-evenly">
@@ -74,9 +75,9 @@
               </div>
           </div>    
         </section>
-
+        <div id="Services"></div>
         <section id="offre">
-            <h3 id="Services">Nos offres</h3>
+            <h3>Nos offres</h3>
             <div id="3offre" class="col-12 ">
                 <div class="row justify-content-evenly">
   
@@ -107,8 +108,8 @@
                 </div>
             </div> 
         </section>
-
-        <section id="partenaire">
+        <div id="partenaire"></div>
+        <section>
             <h3>Nos partenaires</h3><div class="bandeau">
             <marquee width="100%" scrollamount="10" scrolldelay="1">
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
@@ -126,9 +127,9 @@
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
             </marquee>
         </section>
-
+        <div id="galeries"></div>
         <section>
-            <h3 id="galeries">Notre galerie</h3>
+            <h3>Notre galerie</h3>
             <section class="row ">
                 <div>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
@@ -152,8 +153,8 @@
                 </div>
             </section>
         </section>
-
-        <section id="contacte">
+        <div id="contacte"></div>
+        <section>
             <h1>Nous Contacter</h1>
             <ul>
                 <li>
@@ -193,9 +194,9 @@
                 </li>
             </ul>
         </section>
-
+        <div id="Blog"></div>
         <section>
-            <h3 id="Blog">Blog</h3>
+            <h3>Blog</h3>
             <div id="comments-list">
             </div>
             <form action="#" method="post" onSubmit="return false;" id="new-comment">
