--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
               </div>
           </div>    
         </section>
-        <div id="Services"></div>
+        <div id="Services"><br></div>
         <section id="offre">
             <h3>Nos offres</h3>
             <div id="3offre" class="col-12 ">
@@ -108,7 +108,7 @@
                 </div>
             </div> 
         </section>
-        <div id="partenaire"></div>
+        <div id="partenaire"><br></div>
         <section>
             <h3>Nos partenaires</h3><div class="bandeau">
             <marquee width="100%" scrollamount="10" scrolldelay="1">
@@ -127,7 +127,7 @@
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
             </marquee>
         </section>
-        <div id="galeries"></div>
+        <div id="galeries"><br></div>
         <section>
             <h3>Notre galerie</h3>
             <section class="row ">
@@ -153,7 +153,7 @@
                 </div>
             </section>
         </section>
-        <div id="contacte"></div>
+        <div id="contacte"><br></div>
         <section>
             <h1>Nous Contacter</h1>
             <ul>
@@ -194,7 +194,7 @@
                 </li>
             </ul>
         </section>
-        <div id="Blog"></div>
+        <div id="Blog"><br></div>
         <section>
             <h3>Blog</h3>
             <div id="comments-list">
