--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
         </main>
         <hr style="border-color: #ebfaec;">
-        <div id="Apropos"></div>
+        <div id="Apropos"><br><br><br></div>
         <section>
           <h3 id="">Pourquoi nous choisir ?</h3>
           <div id="3offre" class="col-12 ">
@@ -75,7 +75,7 @@
               </div>
           </div>    
         </section>
-        <div id="Services"><br></div>
+        <div id="Services"><br><br><br></div>
         <section id="offre">
             <h3>Nos offres</h3>
             <div id="3offre" class="col-12 ">
@@ -108,7 +108,7 @@
                 </div>
             </div> 
         </section>
-        <div id="partenaire"><br></div>
+        <div id="partenaire"><br><br><br></div>
         <section>
             <h3>Nos partenaires</h3><div class="bandeau">
             <marquee width="100%" scrollamount="10" scrolldelay="1">
@@ -127,25 +127,25 @@
                 <img alt="description de l'image" src="https://via.placeholder.com/200x150">
             </marquee>
         </section>
-        <div id="galeries"><br></div>
+        <div id="galeries"><br><br><br></div>
         <section>
             <h3>Notre galerie</h3>
             <section class="row ">
-                <div>
+                <div class="my-1">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
                 </div>
       
-                <div>
+                <div class="my-1">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
               
-                <div>
+                <div class="my-1">
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                     <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
@@ -153,10 +153,10 @@
                 </div>
             </section>
         </section>
-        <div id="contacte"><br></div>
+        <div id="contacte"><br><br><br></div>
         <section>
             <h1>Nous Contacter</h1>
-            <ul>
+            <ul style="list-style-type: none;">
                 <li>
                     Votre Nom
                     <div>
@@ -194,7 +194,7 @@
                 </li>
             </ul>
         </section>
-        <div id="Blog"><br></div>
+        <div id="Blog"><br><br><br></div>
         <section>
             <h3>Blog</h3>
             <div id="comments-list">
