--- a/index.html
+++ b/index.html
@@ -133,24 +133,24 @@
             <h3>Notre galerie</h3>
             <section class="row ">
                 <div class="my-1">
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
                 </div>
       
                 <div class="my-1">
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
               
                 <div class="my-1">
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href=""> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>   
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>   
                 </div>
             </section>
         </section>
@@ -227,10 +227,10 @@
         </ul>
 
         <div class="item social">
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
+            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/home?lang=fr"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>
         </div>
 
         <p class="copyright">Digital Consultant © 2022</p>
