--- a/index.html
+++ b/index.html
@@ -133,24 +133,24 @@
             <h3>Notre galerie</h3>
             <section class="row ">
                 <div class="my-1">
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>  
                 </div>
       
                 <div class="my-1">
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
                 </div>
               
                 <div class="my-1">
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
-                    <a href="https://placeholder.com/"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>   
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a> 
+                    <a href="https://placeholder.com/" target="_blank"> <img alt="description de l'image" src="https://via.placeholder.com/200x150"> </a>   
                 </div>
             </section>
         </section>
@@ -222,15 +222,15 @@
     <footer class="footer-dark">
 
         <ul>
-            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Conditions d'utilisation</li></a>
-            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html"><li>Mentions Légales</li></a>
+            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank"><li>Conditions d'utilisation</li></a>
+            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank"><li>Mentions Légales</li></a>
         </ul>
 
         <div class="item social">
-            <a href="https://www.instagram.com/?hl=fr"><i class="fab fa-instagram"></i></a>
-            <a href="https://fr-fr.facebook.com/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/home?lang=fr"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://fr-fr.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/home?lang=fr" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
         </div>
 
         <p class="copyright">Digital Consultant © 2022</p>
