--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <h3>Nous Contacter</h3>
             <ul style="list-style-type: none;">
                 <li>
-                    Votre Nom
+                    Votre Identité
                     <div>
                         <input size="15" placeholder="Prénom">                               
                         <input size="15" placeholder="Nom"> 
@@ -174,13 +174,13 @@
                 <li>
                     Sujet :
                     <div>
-                        <input size="20">
+                        <input size="20" placeholder="ex: Demande d'aide">
                     </div>
                 </li>
                 <li>
                     Message :
                     <div>
-                        <textarea cols="60" rows="9" ></textarea>
+                        <textarea cols="60" rows="9" placeholder="Tapez votre commentaire ici"></textarea>
                     </div>
                 </li>
                 <li>
