--- a/index.html
+++ b/index.html
@@ -221,9 +221,9 @@
 
     <footer class="footer-dark">
 
-        <ul>
-            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer"><li>Conditions d'utilisation</li></a>
-            <a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer"><li>Mentions Légales</li></a>
+        <ul style="list-style-type: none;">
+            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer">Conditions d'utilisation</li></a>
+            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer">Mentions Légales</li></a>
         </ul>
 
         <div class="item social">
