--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
     <footer class="footer-dark">
 
         <ul style="list-style-type: none;">
-            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer">Conditions d'utilisation</li></a>
-            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html" target="_blank" rel="noreferrer">Mentions Légales</li></a>
+            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html">Conditions d'utilisation</li></a>
+            <li><a style="color: #ebfaec; text-decoration: none;" href="RGPD.html">Mentions Légales</li></a>
         </ul>
 
         <div class="item social">
