--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <input type="submit" class="btn btn-outline-dark" value="Envoyer" onclick="onReceived()" >
+                    <input type="submit" class="btn btn-outline-light" value="Envoyer" onclick="onReceived()" >
                 </div>
 
             </form>
