--- a/index.html
+++ b/index.html
@@ -113,19 +113,19 @@
         <section>
             <h3>Nos partenaires</h3><div class="bandeau">
             <marquee width="100%" scrollamount="10" scrolldelay="1">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
-                <img alt="description de l'image" src="https://via.placeholder.com/200x150">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
+                <img alt="description de l'image" src="https://via.placeholder.com/200x150" rel="noreferrer">
             </marquee>
         </section>
         <div id="galeries"><br><br><br></div>
